cmake_minimum_required(VERSION 3.14)

project(hello)

add_executable(hello main.cpp)

message("see github: https://github.com/richardchien/modern-cmake-by-example \
         bilibili: https://www.bilibili.com/video/BV14h41187FZ/?spm_id_from=333.880.my_history.page.click&vd_source=346774294417298071ef619a60e3da3e")

